# labretriever

./: .Rbuildignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTORS.txt  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE.html  LICENSE.md  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  dockerfile  in_mcisaac_not_cc.csv  index.html  manage.py  mkdocs.yml  objects.inv  pkgdown.yml  pyproject.toml  search.json  sitemap.xml
.devcontainer/: devcontainer.json
R/: create_url.R  data.R  get.R  logging.R  retrieve.R  send.R  zzz.R
brentlab_yeastresources_collection/: index.html
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
datacard/: index.html
docs/: brentlab_yeastresources_collection.md  conf.py  datacard.md  errors.md  fetchers.md  hf_cache_manager.md  howto.rst  huggingface_datacard.md  index.md  index.rst  make.bat  models.md  users.rst  virtual_db.md  virtual_db_configuration.md
errors/: index.html
fetchers/: index.html
hf_cache_manager/: index.html
huggingface_datacard/: index.html
labretriever/: __init__.py  conftest.py  constants.py  datacard.py  errors.py  fetchers.py  hf_cache_manager.py  models.py  virtual_db.py
man/: apply_additional_endpoints.Rd  apply_filters_to_url.Rd  construct_basic_response_msg.Rd  create_url.Rd  database_info.Rd  extend_msg_error.Rd  get_data.Rd  get_field_info.Rd  get_paginated_data.Rd  get_pagination_info.Rd  get_record_count.Rd  get_table_by_page.Rd  get_total_records.Rd  get_user_auth_token.Rd  post_csv.Rd  (+5 more)
(+102 files in other folders)
