[tool.poetry]
name = "labretriever"
version = "0.2.0"
description = "A collection of classes and functions to facilitate interaction with django.tfbindingandmodeling.com"
authors = ["chasem <chasem@wustl.edu>"]
license = "GPL-3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pandas = "^2.3.1"
huggingface-hub = "^0.34.4"
duckdb = "^1.3.2"
pydantic = "^2.11.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
types-requests = "^2.32.4.20250809"
# TODO: Consider migrating away from MkDocs.
# see https://squidfunk.github.io/mkdocs-material/blog/2026/02/18/mkdocs-2.0/
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.19"
mkdocs-autorefs = "^1.4.3"
mkdocs-jupyter = "^0.25.1"
mkdocstrings = {extras = ["python"], version = "^0.30.0"}
types-pyyaml = "^6.0.12.20250915"


[tool.pytest.ini_options]
minversion = "6.0"
python_files = [
    "tests.py",
    "test_*.py",
]
pythonpath = ['.']
addopts = "--ignore=tmp"

[tool.coverage.run]
include = ["labretriever/**"]
omit = ["*/tests/*", "experiments/"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.py$'

[tool.isort]
profile = "black"
line_length = 88
known_first_party = [
    "labretriever",
]
skip = ["venv/"]

[tool.mypy]
python_version = "3.11"
check_untyped_defs = true
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pylint.FORMAT]
max-line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
